# ml-inference-candle.rs

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml
src/: main.rs
src/inbound/: consumer.rs  consumer_nats.rs  factory_consumer.rs  mod.rs  worker_nats.rs
src/model/: mod.rs  request_message.rs  response_message.rs
src/model/grpc/: grpc_health_v1.rs  inference.rs  mod.rs
src/outbound/: client_grpc.rs  factory_writer.rs  mod.rs  writer.rs  writer_echo.rs  writer_fs.rs
src/service/: factory_llm.rs  llm.rs  llm_qwen.rs  llm_smol.rs  mod.rs
